--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -1,4 +1,14 @@
 <resources>
     <string name="app_name">Braincode2019</string>
     <string name="title_activity_maps">Map</string>
+    <string name="set">SET</string>
+    <string-array name="week">
+        <item>SUNDAY</item>
+        <item>MONDAY</item>
+        <item>TUESDAY</item>
+        <item>WEDNESDAY</item>
+        <item>THURSDAY</item>
+        <item>FRIDAY</item>
+        <item>SATURDAY</item>
+    </string-array>
 </resources>
